[metadata]
name = alembic_viz
author = Jan van Esdonk
author-email = dev@vanesdonk.de
summary = Graph Visualization of Alembic Migrations
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Software Development Libraries

[files]
packages = alembic_viz

[entry_points]
console_scripts =
    alembic-viz = alembic_viz.alembic_viz:cli
