[metadata]
name = alembic_viz
author = Jan van Esdonk
author-email = dev@vanesdonk.de
home-page = https://github.com/javaes/alembic-viz
license = Apache-2
summary = Graph Visualization of Alembic Migrations
description-file = README.md
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages = alembic_viz

[entry_points]
console_scripts =
    alembic-viz = alembic_viz.alembic_viz:cli
